--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@ body {
 }
 
 #spacer {
-
     margin: 10px;
 }
 
@@ -22,6 +21,19 @@ label {
     display: block;
     margin-bottom: 8px;
     font-weight: bold;
+}
+    
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+
+}
+
+.flex-item {
+    flex: 1; /* This allows items to grow and take up available space */
+    /* min-width: calc(50% - 10px); /* This means items will take at least 50% of the container's width, minus a small gap */
+    /* margin: 5px; /* A small gap between items */
 }
 
 input[type="text"],
@@ -65,3 +77,21 @@ input[type="color"] {
     height: 40px;
     cursor: pointer;
 }
+
+.flex-item {
+    width: 100%; /* assuming you want a 20px gap between columns */
+    margin-right: 20px;
+}
+
+
+/* Media query for larger screens */
+@media (min-width: 768px) {
+    .flex-container {
+        flex-direction: row;
+    }
+
+    .flex-item:nth-child(2n) {
+        margin-right: 0; /* remove margin-right for every second field to maintain the gap */
+    }
+}
+
