--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ input[type="color"] {
     font-size: 16px;
 }
 
-input[type="submit"] {
+input[type="submit"], button {
     background-color: #007BFF;
     color: #ffffff;
     padding: 10px 15px;
@@ -48,7 +48,7 @@ input[type="submit"] {
     font-size: 16px;
 }
 
-input[type="submit"]:hover {
+input[type="submit"]:hover, button {
     background-color: #0056b3;
 }
 
